upd:setor procon

--- a/index.html
+++ b/index.html
@@ -441,60 +441,123 @@
                                 </li>
                             </ul>
                         </li>
+                    </ul>
                 </li>
-            </ul>
-            </li>
-            <li class="tree-node">
-                <a href="#" class="node-link setor">
-                    <img src="images/2.jpg" alt="Setor Image" class="node-image">
-                    <span class="node-label">Sala do Empreendedor</span>
-                </a>
-                <ul class="funcionarios">
-                    <li class="tree-node">
-                        <a href="#" class="node-link funcionario">
-                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                            <span class="node-label">Funcionario 1</span>
-                        </a>
-                        <ul class="sub-funcionarios">
-                            <li class="tree-node">
-                                <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                    <span class="node-label">Sub-Funcionario 1</span>
-                                </a>
-                            </li>
-                            <li class="tree-node">
-                                <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                    <span class="node-label">Sub-Funcionario 2</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="tree-node">
-                        <a href="#" class="node-link funcionario funcionario-multisetor">
-                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                            <span class="node-label">Funcionario 2</span>
-                        </a>
-                        <ul class="sub-funcionarios">
-                            <li class="tree-node">
-                                <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                    <span class="node-label">Sub-Funcionario 3</span>
-                                </a>
-                            </li>
-                            <li class="tree-node">
-                                <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                    <span class="node-label">Sub-Funcionario 4</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
+                <li class="tree-node">
+                    <a href="#" class="node-link setor">
+                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <span class="node-label">PROCON</span>
+                    </a>
+                    <ul class="coordenadores">
+                        <li class="tree-node">
+                            <a href="#" class="node-link coordenador">
+                                <img src="imagens/vanessa.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Vanessa</span>
+                                <p class="node-label-cargo">AUX. ADMINISTRATIVA</p>
+                            </a>
+                            <a href="#" class="node-link coordenador">
+                                <img src="imagens/diogo.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Diogo</span>
+                                <p class="node-label-cargo">FISCAL</p>
+                            </a>
+                            <ul class="funcionarios">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Alicia</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Amanda</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Yasmin</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Raquel</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Jenifer</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Gabriel</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li class="tree-node">
+                    <a href="#" class="node-link setor">
+                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <span class="node-label">Sala do Empreendedor</span>
+                    </a>
+                    <ul class="funcionarios">
+                        <li class="tree-node">
+                            <a href="#" class="node-link funcionario">
+                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Funcionario 1</span>
+                            </a>
+                            <ul class="sub-funcionarios">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Sub-Funcionario 1</span>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Sub-Funcionario 2</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="tree-node">
+                            <a href="#" class="node-link funcionario funcionario-multisetor">
+                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Funcionario 2</span>
+                            </a>
+                            <ul class="sub-funcionarios">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Sub-Funcionario 3</span>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Sub-Funcionario 4</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
                 </ul>
-            </li>
-            </ul>
-            </li>
-            </ul>
+                </li>
+                </ul>
         </div>
     </div>
     <script src="js/script.js"></script>
