--- a/index.html
+++ b/index.html
@@ -394,6 +394,30 @@
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <span class="node-label">Trâmite</span>
+                    </a>
+                    <ul class="coordenadores">
+                        <li class="tree-node">
+                            <a href="#" class="node-link coordenador">
+                                <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">?</span>
+                                <p class="node-label-cargo">SERVIDOR</p>
+                            </a>
+                            <ul class="funcionarios">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/2.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">?</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li class="tree-node">
+                    <a href="#" class="node-link setor">
+                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
                         <span class="node-label">Unidade de Conciliação</span>
                     </a>
                     <ul class="coordenadores">
@@ -555,7 +579,7 @@
                         </li>
                     </ul>
                 </li>
-                </ul>
+            </ul>
                 </li>
                 </ul>
         </div>
