mod: fotos estagiários

--- a/index.html
+++ b/index.html
@@ -56,14 +56,17 @@
                             <ul class="gestao-estagiarios" id="gestao-estagiarios">
                                 <li class="tree-node">
                                     <a href="#" class="node-link funcionario">
-                                        <img src="images/3.jpg" alt="Funcionario 1 Image" class="node-image">
-                                        <span class="node-label">Funcionario 1</span>
+                                        <img src="imagens/thaigor.jpg" alt="Funcionario 1 Image" class="node-image">
+                                        <span class="node-label">thaigor</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        <p></p>
                                     </a>
                                 </li>
                                 <li class="tree-node">
                                     <a href="#" class="node-link funcionario">
-                                        <img src="images/3.jpg" alt="Funcionario 2 Image" class="node-image">
-                                        <span class="node-label">Funcionario 2</span>
+                                        <img src="imagens/viviane.jpg" alt="Funcionario 2 Image" class="node-image">
+                                        <span class="node-label">Viviane</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
                                     </a>
                                 <li class="tree-node">
                                     <a href="#" class="node-link funcionario">
@@ -385,6 +388,37 @@
                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Kayo</span>
                                         <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li class="tree-node">
+                    <a href="#" class="node-link setor">
+                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <span class="node-label">Samae</span>
+                    </a>
+                    <ul class="coordenadores">
+                        <li class="tree-node">
+                            <a href="#" class="node-link coordenador">
+                                <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Lucas</span>
+                                <p class="node-label-cargo">?</p>
+                            </a>
+                            <ul class="funcionarios">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/2.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Maria</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/2.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Alanna</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
                                     </a>
                                 </li>
                             </ul>
