--- a/index.html
+++ b/index.html
@@ -397,37 +397,6 @@
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
-                        <span class="node-label">Samae</span>
-                    </a>
-                    <ul class="coordenadores">
-                        <li class="tree-node">
-                            <a href="#" class="node-link coordenador">
-                                <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
-                                <span class="node-label">Lucas</span>
-                                <p class="node-label-cargo">?</p>
-                            </a>
-                            <ul class="funcionarios">
-                                <li class="tree-node">
-                                    <a href="#" class="node-link">
-                                        <img src="images/2.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Maria</span>
-                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                    </a>
-                                </li>
-                                <li class="tree-node">
-                                    <a href="#" class="node-link">
-                                        <img src="images/2.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Alanna</span>
-                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li class="tree-node">
-                    <a href="#" class="node-link setor">
-                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
                         <span class="node-label">Trâmite</span>
                     </a>
                     <ul class="coordenadores">
@@ -504,7 +473,87 @@
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <span class="node-label">Sala do Empreendedor</span>
+                    </a>
+                    <ul class="funcionarios">
+                        <li class="tree-node">
+                            <a href="#" class="node-link funcionario">
+                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Funcionario 1</span>
+                            </a>
+                            <ul class="sub-funcionarios">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Sub-Funcionario 1</span>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Sub-Funcionario 2</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="tree-node">
+                            <a href="#" class="node-link funcionario funcionario-multisetor">
+                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Funcionario 2</span>
+                            </a>
+                            <ul class="sub-funcionarios">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Sub-Funcionario 3</span>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Sub-Funcionario 4</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li class="tree-node">
+                    <a href="#" class="node-link setor">
+                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <span class="node-label">Samae</span>
+                    </a>
+                    <ul class="coordenadores">
+                        <li class="tree-node">
+                            <a href="#" class="node-link coordenador">
+                                <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Lucas</span>
+                                <p class="node-label-cargo">?</p>
+                            </a>
+                            <ul class="funcionarios">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/2.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Maria</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/2.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Alanna</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li class="tree-node parceiro-setor">
+                    <a href="#" class="node-link setor">
+                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
                         <span class="node-label">PROCON</span>
+                        <p class="node-label-cargo">PARCEIRO</p>
                     </a>
                     <ul class="coordenadores">
                         <li class="tree-node">
@@ -559,54 +608,6 @@
                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Gabriel</span>
                                         <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li class="tree-node">
-                    <a href="#" class="node-link setor">
-                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
-                        <span class="node-label">Sala do Empreendedor</span>
-                    </a>
-                    <ul class="funcionarios">
-                        <li class="tree-node">
-                            <a href="#" class="node-link funcionario">
-                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                <span class="node-label">Funcionario 1</span>
-                            </a>
-                            <ul class="sub-funcionarios">
-                                <li class="tree-node">
-                                    <a href="#" class="node-link">
-                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Sub-Funcionario 1</span>
-                                    </a>
-                                </li>
-                                <li class="tree-node">
-                                    <a href="#" class="node-link">
-                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Sub-Funcionario 2</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="tree-node">
-                            <a href="#" class="node-link funcionario funcionario-multisetor">
-                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                <span class="node-label">Funcionario 2</span>
-                            </a>
-                            <ul class="sub-funcionarios">
-                                <li class="tree-node">
-                                    <a href="#" class="node-link">
-                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Sub-Funcionario 3</span>
-                                    </a>
-                                </li>
-                                <li class="tree-node">
-                                    <a href="#" class="node-link">
-                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Sub-Funcionario 4</span>
                                     </a>
                                 </li>
                             </ul>
