mod:fotos-triagem

--- a/index.html
+++ b/index.html
@@ -72,14 +72,9 @@
                                         </a>
                                     <li class="tree-node">
                                         <a href="#" class="node-link funcionario">
-                                            <img src="images/3.jpg" alt="Funcionario 1 Image" class="node-image">
-                                            <span class="node-label">Funcionario 1</span>
-                                        </a>
-                                    </li>
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link funcionario">
-                                            <img src="images/3.jpg" alt="Funcionario 2 Image" class="node-image">
-                                            <span class="node-label">Funcionario 2</span>
+                                            <img src="imagens/maria odorizzi.jpg" alt="Funcionario 1 Image" class="node-image">
+                                            <span class="node-label">Maria</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
                                         </a>
                                     </li>
                                 </ul>
@@ -96,33 +91,34 @@
                     <ul class="funcionarios">
                         <li class="tree-node">
                             <a href="#" class="node-link">
-                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <img src="imagens/bianca.jpg" alt="Employee Image" class="node-image">
                                 <span class="node-label">Bianca</span>
                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                             </a>
                         </li>
                         <li class="tree-node">
                             <a href="#" class="node-link">
-                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <img src="imagens/denise.jpg" alt="Employee Image" class="node-image">
                                 <span class="node-label">Denise</span>
                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                             </a>
                         </li>
                         <li class="tree-node">
                             <a href="#" class="node-link">
-                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <img src="imagens/liz.jpg" alt="Employee Image" class="node-image">
                                 <span class="node-label">Liz</span>
                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                             </a>
                         </li>
                         <li class="tree-node">
                             <a href="#" class="node-link">
-                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <img src="imagens/carlos henrick.jpg" alt="Employee Image" class="node-image">
                                 <span class="node-label">Carlos</span>
                                 <p class="node-label-cargo">ESTAGIÁRIO</p>
                             </a>
                         </li>
                     </ul>
+                </li>
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
@@ -555,9 +551,9 @@
                             <ul class="funcionarios">
                                 <li class="tree-node">
                                     <a href="#" class="node-link funcionario">
-                                        <img src="imagens/carlos borchardt.jpg" alt="Coordenador Image" class="node-image">
-                                        <span class="node-label">Carlos</span>
-                                        <p class="node-label-cargo">SERVIDOR</p>
+                                        <img src="imagens/francisca.jpg" alt="Coordenador Image" class="node-image">
+                                        <span class="node-label">Francisca</span>
+                                        <p class="node-label-cargo">SERVIDORA</p>
                                     </a>
                                     </li>
                                 </ul>
