mod:fotos-identidade

--- a/index.html
+++ b/index.html
@@ -540,101 +540,102 @@
                     <a href="#" class="node-link-chefe">
                         <img src="imagens/chantelli.jpg" alt="Employee Image" class="node-image">
                         <span class="node-label">Chantelli</span>
-                        <p class="node-label-cargo">SERVIDOR</p>
+                        <p class="node-label-cargo">SERVIDORA</p>
                     </a>
-                        <li class="tree-node parceiro-setor">
-                            <a href="#" class="node-link setor">
-                                <img src="images/2.jpg" alt="Setor Image" class="node-image">
-                                <span class="node-label">Demutran</span>
-                                <p class="node-label-cargo">PARCEIRO</p>
-                            </a>
-                            <ul class="funcionarios">
-                                <li class="tree-node">
-                                    <a href="#" class="node-link funcionario">
-                                        <img src="imagens/francisca.jpg" alt="Coordenador Image" class="node-image">
-                                        <span class="node-label">Francisca</span>
-                                        <p class="node-label-cargo">SERVIDORA</p>
-                                    </a>
+                    <li class="tree-node parceiro-setor">
+                        <a href="#" class="node-link setor">
+                            <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                            <span class="node-label">Demutran</span>
+                            <p class="node-label-cargo">PARCEIRO</p>
+                        </a>
+                        <ul class="funcionarios">
+                            <li class="tree-node">
+                                <a href="#" class="node-link funcionario">
+                                    <img src="imagens/francisca.jpg" alt="Coordenador Image" class="node-image">
+                                    <span class="node-label">Francisca</span>
+                                    <p class="node-label-cargo">SERVIDORA</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="tree-node parceiro-setor">
+                        <a href="#" class="node-link setor">
+                            <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                            <span class="node-label">IDENTIDADE</span>
+                            <p class="node-label-cargo">PARCEIRO</p>
+                        </a>
+                        <ul class="funcionarios">
+                            <li class="tree-node">
+                                <a href="#" class="node-link funcionario">
+                                    <img src="imagens/monalisa.jpg" alt="Employee Image" class="node-image">
+                                    <span class="node-label">Monalisa</span>
+                                    <p class="node-label-cargo">SERVIDORA</p>
+                                </a>
+                                <ul class="sub-funcionarios">
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="imagens/alana.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Alana</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        </a>
+                                    </li>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="imagens/thais.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Thais</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        </a>
+                                    </li>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="imagens/caroline.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Caroline</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        </a>
+                                    </li>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="imagens/fernando.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Fernando</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        </a>
+                                    </li>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="imagens/cristopher.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Cristopher</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        </a>
+                                    </li>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="imagens/gabriela.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Gabriela</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        </a>
+                                    </li>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="imagens/dandara.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Dandara</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        </a>
+                                    </li>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="imagens/jennifer.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Jennifer</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        </a>
+                                    </li>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Francine</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        </a>
                                     </li>
                                 </ul>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                            <li class="tree-node parceiro-setor">
-                                <a href="#" class="node-link setor">
-                                    <img src="images/2.jpg" alt="Setor Image" class="node-image">
-                                    <span class="node-label">IDENTIDADE</span>
-                                    <p class="node-label-cargo">PARCEIRO</p>
-                                </a>
-                                <ul class="funcionarios">
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link funcionario">
-                                            <img src="imagens/monalisa.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Monalisa</span>
-                                            <p class="node-label-cargo">SERVIDORA</p>
-                                        </a>
-                                        <ul class="sub-funcionarios">
-                                            <li class="tree-node">
-                                                <a href="#" class="node-link">
-                                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                    <span class="node-label">Alana</span>
-                                                    <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                                </a>
-                                            <li class="tree-node">
-                                                <a href="#" class="node-link">
-                                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                    <span class="node-label">Thais</span>
-                                                    <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                                </a>
-                                            <li class="tree-node">
-                                                <a href="#" class="node-link">
-                                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                    <span class="node-label">Caroline</span>
-                                                    <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                                </a>
-                                            <li class="tree-node">
-                                                <a href="#" class="node-link">
-                                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                    <span class="node-label">Fernando</span>
-                                                    <p class="node-label-cargo">ESTAGIÁRIO</p>
-                                                </a>
-                                            <li class="tree-node">
-                                                <a href="#" class="node-link">
-                                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                    <span class="node-label">Cristopher</span>
-                                                    <p class="node-label-cargo">ESTAGIÁRIO</p>
-                                                </a>
-                                            </li>
-                                            <li class="tree-node">
-                                                <a href="#" class="node-link">
-                                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                    <span class="node-label">Gabriela</span>
-                                                    <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                                </a>
-                                            </li>
-                                            <li class="tree-node">
-                                                <a href="#" class="node-link">
-                                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                    <span class="node-label">Dandara</span>
-                                                    <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                                </a>
-                                            </li>
-                                            <li class="tree-node">
-                                                <a href="#" class="node-link">
-                                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                    <span class="node-label">Jennifer</span>
-                                                    <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                                </a>
-                                            </li>
-                                            <li class="tree-node">
-                                                <a href="#" class="node-link">
-                                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                    <span class="node-label">Francine</span>
-                                                    <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                                </a>
-                                            </li>
-                                        </ul>
                                     </a>
                                 </li>
                             </ul>
