mod:fotos-call center

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             </a>
                         </li>
                     </ul>
-                </li>
+                </li> <!--TRIAGEM-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
@@ -133,6 +133,7 @@
                             </a>
                         </li>
                     </ul>
+                </li> <!--TI-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
@@ -141,34 +142,34 @@
                     <ul class="funcionarios">
                         <li class="tree-node">
                             <a href="#" class="node-link">
-                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <img src="imagens/mariana.jpg" alt="Employee Image" class="node-image">
                                 <span class="node-label">Mariana</span>
                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                             </a>
                         </li>
                         <li class="tree-node">
                             <a href="#" class="node-link">
-                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <img src="imagens/neusa.jpg" alt="Employee Image" class="node-image">
                                 <span class="node-label">Neusa</span>
                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                             </a>
                         </li>
                         <li class="tree-node">
                             <a href="#" class="node-link">
-                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <img src="imagens/jessica.jpg" alt="Employee Image" class="node-image">
                                 <span class="node-label">Jessica</span>
                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                             </a>
                         </li>
                         <li class="tree-node">
                             <a href="#" class="node-link">
-                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <img src="imagens/eymmi.jpg" alt="Employee Image" class="node-image">
                                 <span class="node-label">Eymmi</span>
                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                             </a>
                         </li>
                     </ul>
-                </li>
+                </li> <!--CALL CENTER-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
@@ -630,22 +631,16 @@
                                     </li>
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <img src="imagens/francine.jpg" alt="Employee Image" class="node-image">
                                             <span class="node-label">Francine</span>
                                             <p class="node-label-cargo">ESTAGIÁRIA</p>
                                         </a>
                                     </li>
                                 </ul>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        </li>
-                    </ul>
-                </li>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
-            </ul>
-            </li>
             </ul>
         </div>
     </div>
