mod: foto-trâmite

--- a/index.html
+++ b/index.html
@@ -178,22 +178,13 @@
                     <ul class="coordenadores">
                         <li class="tree-node">
                             <a href="#" class="node-link coordenador">
-                                <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
-                                <span class="node-label">?</span>
-                                <p class="node-label-cargo">SERVIDOR</p>
+                                <img src="imagens/aline.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Aline</span>
+                                <p class="node-label-cargo">SERVIDORA</p>
                             </a>
-                            <ul class="funcionarios">
-                                <li class="tree-node">
-                                    <a href="#" class="node-link">
-                                        <img src="images/2.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">?</span>
-                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                    </a>
-                                </li>
-                            </ul>
                         </li>
                     </ul>
-                </li>
+                </li> <!--TRÂMITE-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
